--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorBottomNavigationViewBackground">#FFFFFF</color>
+    <color name="colorBottomNavigationViewIconTint">@color/colorPrimary</color>
+    <color name="colorBottomNavigationViewTextColor">@color/colorPrimary</color>
+
+    <color name="colorScreenBackground">#E7E8ED</color>
+    <color name="colorShapeBackground">#FFFFFF</color>
+
+    <color name="colorPlaceholder">#DBDBDB</color>
 </resources>
