--- a/app/src/main/res/layout/list_item_movies.xml
+++ b/app/src/main/res/layout/list_item_movies.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="movie"
-            type="com.kennedydias.libermovies.ui.movies.MovieData" />
+            type="com.kennedydias.domain.model.MovieShortData" />
 
     </data>
 
