--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#009DFF</color>
+    <color name="colorPrimaryDark">#0076BE</color>
+    <color name="colorAccent">#73C664</color>
+
+    <color name="colorBottomNavigationViewBackground">#FFFFFF</color>
+    <color name="colorBottomNavigationViewIconTint">@color/colorPrimary</color>
+    <color name="colorBottomNavigationViewTextColor">@color/colorPrimary</color>
+
     <color name="colorScreenBackground">#E7E8ED</color>
     <color name="colorShapeBackground">#FFFFFF</color>
+
+    <color name="colorPlaceholder">#DBDBDB</color>
 </resources>
