--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -18,7 +18,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorScreenBackground">
+            android:background="@color/colorScreenBackground"
+            android:focusable="false">
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchView"
@@ -27,7 +28,6 @@
                 android:layout_margin="8sp"
                 android:background="@drawable/shape_rect_rounded_border"
                 android:elevation="2dp"
-                android:focusable="false"
                 app:defaultQueryHint="@string/search"
                 app:iconifiedByDefault="false"
                 app:layout_constraintEnd_toEndOf="parent"
