--- a/app/src/main/res/layout/list_item_movies.xml
+++ b/app/src/main/res/layout/list_item_movies.xml
@@ -14,18 +14,45 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_width="match_parent">
 
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:contentDescription="@null"
-            app:imageUrl="@{movie.poster}" />
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="8dp">
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="280dp"
+                android:contentDescription="@null"
+                android:scaleType="centerCrop"
+                app:imageUrl="@{movie.poster}" />
+
+        </com.google.android.material.card.MaterialCardView>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@{movie.year}"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            tools:text="2019" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
             android:text="@{movie.title}"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             tools:text="title" />
 
     </LinearLayout>
