--- a/app/src/main/res/layout/list_item_movies.xml
+++ b/app/src/main/res/layout/list_item_movies.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="viewModel"
+            type="com.kennedydias.libermovies.ui.movies.MoviesViewModel" />
+
+        <variable
             name="movie"
             type="com.kennedydias.domain.model.MovieShortData" />
 
@@ -23,6 +27,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="@{() -> viewModel.seeMore(movie)}"
             app:cardCornerRadius="10dp"
             app:cardElevation="8dp">
 
@@ -42,7 +49,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="@{movie.year}"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:textSize="12sp"
             tools:text="2019" />
 
         <TextView
@@ -51,8 +58,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
+            android:ellipsize="end"
+            android:lines="2"
             android:text="@{movie.title}"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             tools:text="title" />
 
     </LinearLayout>
