--- a/app/src/main/res/layout/list_item_movies.xml
+++ b/app/src/main/res/layout/list_item_movies.xml
@@ -13,6 +13,10 @@
             name="movie"
             type="com.kennedydias.domain.model.MovieShortData" />
 
+        <variable
+            name="isFocusedItem"
+            type="Boolean" />
+
     </data>
 
     <LinearLayout
@@ -22,20 +26,21 @@
         tools:layout_width="match_parent">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="180dp"
+            android:layout_height="260dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:focusable="true"
             android:onClick="@{() -> viewModel.seeMore(movie)}"
+            android:setAnimatedFocus="@{isFocusedItem}"
             app:cardCornerRadius="10dp"
             app:cardElevation="8dp">
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="280dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:contentDescription="@null"
                 android:scaleType="centerCrop"
                 app:imageUrl="@{movie.poster}" />
