Implement a visual loading
Implemented a visual loading to indicate that is happening a request to API

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="colorShapeBackground">#FFFFFF</color>
 
     <color name="colorPlaceholder">#DBDBDB</color>
+
+    <color name="colorLoadingBackground">#E2FFFFFF</color>
 </resources>
