Add the ability to save/remove favorite movie/series

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -188,7 +188,8 @@
             android:layout_margin="24dp"
             android:scaleX="0"
             android:scaleY="0"
-            android:src="@{viewModel.getFavoriteIcon()}"
+            android:onClick="@{() -> viewModel.addOrRemoveFavorite()}"
+            android:src="@drawable/ic_favorite_border"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:scaleX="1"
