Translate the app to Portuguese (BR)

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,4 +12,6 @@
     <color name="colorPlaceholder">#1E1E1E</color>
 
     <color name="colorLoadingBackground">#C91E1E1E</color>
+
+    <color name="colorFilterIcon">#E2E0E0E0</color>
 </resources>
