--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -40,6 +40,7 @@
                 android:contentDescription="@string/filter_movies_list"
                 android:onClick="@{() -> viewModel.openMoviesFilter()}"
                 android:src="@drawable/ic_more_vert"
+                android:tint="@color/colorFilterIcon"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewLabelMovie"
                 app:layout_constraintEnd_toEndOf="@+id/textViewLabelMovie"
                 app:layout_constraintTop_toTopOf="@+id/textViewLabelMovie" />
@@ -69,6 +70,7 @@
                 android:contentDescription="@string/filter_series_list"
                 android:onClick="@{() -> viewModel.openSeriesFilter()}"
                 android:src="@drawable/ic_more_vert"
+                android:tint="@color/colorFilterIcon"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewLabelSeries"
                 app:layout_constraintEnd_toEndOf="@+id/textViewLabelSeries"
                 app:layout_constraintTop_toTopOf="@+id/textViewLabelSeries" />
